GoNoGo/force-app/main/default/objects/Go_No_Go_Linked_Submission__c/Go_No_Go_Linked_Submission__c.object-meta.xml
<CustomObject>
    <label>Go/No-Go Linked Submission</label>
    <nameField>
        <displayFormat>GNGLS-{0000}</displayFormat>
        <label>Go/No-Go Linked Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Go/No-Go Linked Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>