GoNoGo/force-app/main/default/objects/Go_No_Go_Linked_Submission__c/fields/Go_No_Go_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Go/No-Go Configuration</label>
    <referenceTo>Go_No_Go_Configuration__c</referenceTo>
    <relationshipLabel>Go/No-Go Linked Submissions</relationshipLabel>
    <relationshipName>Go_No_Go_Linked_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>