GoNoGo/force-app/main/default/objects/Go_No_Go_Linked_Submission__c/fields/Go_No_Go_Submission__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Submission__c</fullName>
    <label>Go/No-Go Submission</label>
    <referenceTo>Go_No_Go_Answer__c</referenceTo>
    <relationshipLabel>Go/No-Go Linked Submissions</relationshipLabel>
    <relationshipName>Go_No_Go_Linked_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>