GoNoGo/force-app/main/default/objects/Go_No_Go_Linked_Submission__c/fields/Score_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Score_Breakdown__c</fullName>
    <label>Score Breakdown</label>
    <length>100</length>
    <type>Text</type>
</CustomField>